# screeny

./: Cargo.toml  README.md  screeny.sh
src/: main.rs
src/platform/: mac.rs  mod.rs  windows.rs
web/: index.html
